<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_mock_adapter</name>
  <version>0.0.1</version>
  <description>Package for testing a mock fleet adapter concept</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <license>Apache License 2.0</license>
  <author>Grey</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rmf_traffic</build_depend>
  <build_export_depend>rmf_traffic</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
